# ScanCode

./: .gitignore  BackGroundFunc.C  CMakeLists.txt  FillSpectrum.cc  FitSpectrum.cxx  FullSpecFunc.C  HypBkgdFunc.C  LevelIntensities2_0.txt  LevelIntensities2_1.txt  LevelIntensities_0.txt  LevelIntensities_1.txt  LevelMaker.C  MakeAxis.h  ProcessorRootStruc.hpp  RemoveBackground.C  RemoveBackground_2.C  SpectrumFunc.hpp  StateLevels.txt  WalkParams.h  calcResponse.hpp  dummyFuncs.h  fullFuncClass.hpp  generateResponse.hpp  output2_0.txt  output2_1.txt  output_0.txt  output_1.txt  quickFit.C  testClass.C  testClass.h  tofFuncClass.hpp
Configs/: Config_spec.txt
FitInfo/: 1560peaks.txt  1560peaks_QDC2500.txt  49K_t0_En.txt  853peaks.txt  In134peaks_1560GS.txt  In134peaks_1560gammas.txt  In134peaks_1561sorted.txt  In134peaks_all.txt  In134peaks_gamGated.txt  In134peaks_gammas.txt  In134peaks_sorted.txt  In134peaks_sorted_old.txt  functions.txt
FitInfo/ver1/: 1560peaks_QDC400.txt  853peaks_QDC400.txt  In134peaks_all.txt
HFCalculations/: BGT_full.txt  CMakeLists.txt  GT_Dway.txt  GTsumfiles.txt  HFHist.C  incfiles.txt  makeHists.C  reader.cpp  srcfiles.txt
HFCalculations/include/: FileReader.h  FileReader.hpp  HFReader.h  HFReader.hpp
HFCalculations/input/: FF_18Dway.txt  FFsumfiles.txt  GT_17Dway.txt  GTsumfiles.txt  newGT.txt
HFCalculations/input/becchetti/: HF_J5.txt  HF_J6.txt  HF_J7.txt  HF_J8.txt
HFCalculations/input/koning/: HF_J5.txt  HF_J6.txt  HF_J7.txt  HF_J8.txt
HFCalculations/input/kunieda/: hf_kunieda.txt
HFCalculations/input/oldKoning/: HF_j5GT.txt  HF_j6GT.txt  HF_j8GT.txt
HFCalculations/plotting/: aggregate_comp.C  dwayplot.py  hfplot.C  hfplot_v1.C  hfplot_v2.C  polys3d.py  polys3d_shell_model.py  relative_comp.C  statmodelplot.py  test.py
HFCalculations/source/: CMakeLists.txt  Chi2Analyzer.cc  Doorway.cc  Doorway_bak.cc  Doorway_bak_v2.cc  FileReader.C  FileReader.cpp  HFHist.C  HFReader.C  HFReader.cpp  HFSummary.cc  HFSummary.cc.bak
LevelMaker/: DecayMaker.C  EmptyLevels.txt  LevelMaker.C  StateLevels.txt
include/: BkgdFunc.hpp  ConfigReader.hpp  FillSpectrum.hpp  FitFuncClass.hpp  FullFuncClass.hpp  FullSpecFunc.hpp  MakeAxis.h  SpectrumClass.hpp  SpectrumFunc.hpp  VandleEff.h  VandleEff.hpp  WalkParams.h  dummyFuncs.h  dummyFuncs.hpp  files.txt  fullFuncClass.hpp  generateResponse.hpp  nResponse.hpp  optionHandler.hh  testClass.h  tofFuncClass.hpp
src/: BkgdFunc.C  BkgdFunc.cpp  ConfigReader.cpp  FillSpectrum.cc  FitFuncClass.cpp  FitSpectrum.cc  FullFuncClass.cpp  FullSpecFunc.C  FullSpecFunc.cpp  FullSpecFunc_Hyp.C  HypBkgdFunc.C  LevelMaker.C  PieceBkgdFunc.C  RemoveBackground.C  RemoveBackground_2.C  SpectrumClass.cpp  SpectrumFunc.cpp  addPeaks.C  calcEn.cc  calcResponse.cpp  dummyFuncs.cpp  files.txt  fullFuncClass.cpp  optionHandler.cc  optionHandler.cpp  quickFit.C  testClass.C  tofFuncClass.cpp
tools/: Dist.C  HistLevels.txt  LevelMaker.C  PlotFT.C  logft_60.txt  logft_70.txt  logft_80.txt  logft_90.txt  mac.C  rmac.C
tools/include/: FileReader.h  FitFuncClass.hpp  MakeAxis.h  Resolution.hpp  VandleEff.hpp  WalkParams.h  calcResponse.hpp  dummyFuncs.h  testClass.h  tofFuncClass.hpp
tools/src/: BGTMaker.C  BkgdFunc.C  FileReader.C  FullSpecFunc_Hyp.C  PlotRes.C  addPeaks.C  calcResponse.cpp  testClass.C  testFitSpec.C  tofFuncClass.cpp
